--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "nodemon": "^3.1.7",
     "razorpay": "^2.9.5",
     "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "twilio": "^5.4.0"
   }
 }
